# GroundedVision

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: CostAnalysis.xlsx  mkdocs.yml
docs/docs/: index.md
groundedvision/: __init__.py  dataset.py  equirect_to_cubemap.py  features.py  image_alignment.py  plots.py  projective_view.py  pydantic_schema.py  utils.py
groundedvision/audit/: __init__.py  annotation_manager.py  continuous_annotator.py
groundedvision/construction/: __init__.py  analyzer.py  taxonomy.py
groundedvision/ground_truth/: ground_truth.py
groundedvision/modeling/: predict.py  train.py
notebooks/: ConstructProgress.ipynb  CubemapCross.ipynb  DataGeneration.ipynb  DifferenceConstruct.ipynb  PanoramatoVideo.ipynb  PreProcessing.ipynb
notebooks/audit/: AuditProgressTracker.ipynb
notebooks/experiments/: QwenVL3Experiment.ipynb  QwenVL3Experiment_parallel_calls.ipynb
prompts/: compareprompt.txt  compareprompt_cubemap.txt  compareprompt_cubemap_v2.txt  compareprompt_panorama_video.txt
scripts/: extract_frames.sh
utilities/: README.md  equirectangular.html  player360.html  viewer360.html  viewer360_compare.html
