[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "groundedvision"
version = "0.0.1"
description = "Applied Computer Vision algorithms for the construction lifecycle, focusing on site safety, progress tracking, and material segmentation."
authors = [
  { name = "Satish Lokkoju" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "loguru",
    "mkdocs",
    "pip",
    "pytest",
    "python-dotenv",
    "tqdm",
    "typer",
    "requests",
    "pillow",
    "matplotlib",
    "jupyter",
    "notebook",
    "ipywidgets",
    "ipycanvas",
    "ipympl",
    "pycocotools",
    "decord",
    "opencv-python",
    "einops",
    "scikit-image",
    "scikit-learn",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["groundedvision"]
force_sort_within_sections = true


